2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Add m4 magic to allow AS_HELP_STRING to work with older versions
	of autoconf 2.57.

2005-12-03  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for X11R7 RC3 release.

2005-10-18  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* configure.ac:
	Update package version number for RC1 release.

2005-10-18  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am: 
	Substitute __VENDOR__ with $(VENDORNAME) in disclaimer in XVidtune
	app-defaults file

	* configure.ac: 
	Add --with-vendor-name option to set $(VENDORNAME).
	Set default $(VENDORNAME) to "The X.Org Foundation".	

2005-10-13  Alan Coopersmith  <alan.coopersmith@sun.com>

	* man/Makefile.am: 
	* configure.ac:
	Use sed to fill in variables in man page

